--- a/templates/admin-reservation-show.page.tmpl
+++ b/templates/admin-reservation-show.page.tmpl
@@ -18,6 +18,8 @@ Show reservation
 
   <form action="/admin/reservations/{{$src}}/{{$res.ID}}" method="post"  class="" novalidate>
     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+    <input type="hidden" name="year" value="{{index .StringMap "year"}}">
+    <input type="hidden" name="month" value="{{index .StringMap "month"}}">
 
 
     <div class="form-group mt-5">
