Tests on admin view

--- a/templates/admin-all-reservations.page.tmpl
+++ b/templates/admin-all-reservations.page.tmpl
@@ -28,7 +28,7 @@ All reservations
 {{range $res}}
 <tr style="background: 	#d1e0f4">
       <td>{{.ID}}</td>
-      <td><a href="/admin/reservations/all/{{.ID}}" style="text-decoration: none;">
+      <td><a href="/admin/reservations/all/{{.ID}}/show" style="text-decoration: none;">
             {{.LastName}}
       </a>
 </td>
