--- a/templates/admin-new-reservations.page.tmpl
+++ b/templates/admin-new-reservations.page.tmpl
@@ -29,7 +29,7 @@ New reservations
   {{range $res}}
   <tr style="background: 	#d1e0f4">
         <td>{{.ID}}</td>
-        <td><a href="/admin/reservations/new/{{.ID}}" style="text-decoration: none;">
+        <td><a href="/admin/reservations/new/{{.ID}}/show" style="text-decoration: none;">
               {{.LastName}}
         </a>
   </td>
