--- a/templates/admin-reservation-show.page.tmpl
+++ b/templates/admin-reservation-show.page.tmpl
@@ -2,7 +2,7 @@
 
 
 {{define "page-title"}}
-Show reservation
+Reservation
 {{end}}
 
 {{define "content"}}
@@ -66,11 +66,13 @@ Show reservation
     {{else}}
     <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
     {{end}}
-
-    <a href="#!" class="btn btn-info" onclick="processRes('{{ $res.ID }}')">Mark as Processed</a>
+    {{if eq $res.Processed 0}}
+    <a href="#!" class="btn btn-info" onclick="processRes({{ $res.ID }})">Mark as Processed</a>
+    {{end}}
 </div>
+
 <div class="float-right" style="float: right;">
-    <a href="#!" class="btn btn-danger" onclick="deleteRes('{{ $res.ID }}')">Delete</a>
+    <a href="#!" class="btn btn-danger" onclick="deleteRes({{ $res.ID }})">Delete</a>
 </div>
 <div class="clearfix"></div>
 </form>
@@ -87,8 +89,10 @@ Show reservation
             icon: "warning",
             msg: "Are you sure?",
             callback: function(result) {
-                if (result != false) {
-                    window.location.href = "/admin/process-reservation/{{$src}}/" + id;
+                if (result !== false) {
+                    window.location.href = "/admin/process-reservation/{{$src}}/"
+                    + id
+                    + "/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
                 }
             }
         })
@@ -99,8 +103,10 @@ Show reservation
             icon: "warning",
             msg: "Are you sure?",
             callback: function(result) {
-                if (result != false) {
-                    window.location.href = "/admin/delete-reservation/{{$src}}/" + id;
+                if (result !== false) {
+                    window.location.href = "/admin/delete-reservation/{{$src}}/"
+                    + id
+                    + "/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
                 }
             }
         })
