setting up flags

--- a/templates/choose-room.page.tmpl
+++ b/templates/choose-room.page.tmpl
@@ -11,7 +11,7 @@
 
             <ul>
             {{range $rooms}}
-            <li><a href="/choose-room/{{.ID}}">{{.RoomName}}</a></li>
+            <li style="list-style: none;"><a href="/choose-room/{{.ID}}" style="font-size: 20px; color: #F88379">{{.RoomName}}</a></li>
             {{end}}
         </ul>
 
