--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -38,12 +38,12 @@
 <div class="container main-content">
     <div class="row">
         <div class="col">
-            <h1 class="text-center mt-4">Welcome to Fort Smythe Bed and Breakfast</h1>
-            <p>Your home away from fome, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.Your home away from fome, set on the majestic waters of the Atlantic 					Ocean, this will be a vacation to remember.Your home away from fome, set on the majestic 					waters of the Atlantic Ocean, this will be a vacation to remember.Your home away from fome, 					set on the majestic waters of the Atlantic Ocean, this will be a vacation to 					remember.Your home away from fome, set on the majestic waters of the Atlantic Ocean, this 					will be a vacation to remember.</p>
+            <h1 class="text-center mt-4 mb-4">Welcome to Fort Smythe Bed and Breakfast</h1>
+            <h6>Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.</h6>
         </div>
             </div>
             <div class="row">
-                <div class="col text-center">
+                <div class="col text-center mt-4">
                   <button class="book-button">
                     <a href="/search-availability">Make Reservation Now</a>
                   </button>
