--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -7,32 +7,38 @@
 
             <div class="container text-center mt-5">
                 <h5 class="the-fort">Fort Smythe</h5>
-                <p>At Fort Smythe we offer the best comfort. Our interior goes in a Scandinavian design aestetic and we are proud to have our own stylist. We offer
-                    rooms in sizes of 1-3 with all the fascilities you might need.
+                <p>At Fort Smythe we offer the best comfort. Our interior goes in a Scandinavian design aesthetic and we are proud to have our own stylist. We offer
+                    rooms in sizes of 1-3 with all the facilities you might need.
                 </p>
 
             </div>
+
+
             <div class="container about-container">
                 <div class="row mt-5">
-                    <div class="col-3 d-inline-flex p-2">
-                        <img src="/assets/images/interior3.jpg" class="interior3">
+
+                      <div class="col-sm">
+                        <img src="/assets/images/interior1.jpg" style="width: 289px">
                     </div>
-                    <div class="col-4 d-md-inline-flex p-2">
-                        <img src="/assets/images/interior4.jpeg" class="interior4">
-                        <div class="col-6 d-inline-flex p-2">
-                            <img src="/assets/images/interior5.jpeg" class="interior5">
-                            <img src="/assets/images/interior6.jpg" class="interior6">
+                    <div class="col-sm">
+                      <img src="/assets/images/interior2.jpeg" style="width: 289px">
+                </div>
+
+                       <div class="col-sm">
+                            <img src="/assets/images/interior3.jpg" style="width: 289px">
+                          </div>
+
                         </div>
-                    </div>
-                    </div>
+
+
 </div>
 
 
 <div class="container mt-5 mb-5">
   <h4 class="staff-heading">We who work here</h4>
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-center">
 
-        <div class="card my-card" style="width: 18rem; background-color: #F88379; margin-right: 20px">
+        <div class="card" style="width: 18rem; background-color: #F88379; margin-right: 20px; margin-bottom: 20px">
             <img class="card-img-top" style="width: 209px; height: 188px; margin: auto" src="/assets/images/person1.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title text-center">Matilda Smith</h5>
@@ -45,7 +51,7 @@
 
 
 
-          <div class="card my-card" style="width: 18rem; background-color: #F88379; margin-right: 20px">
+          <div class="card" style="width: 18rem; background-color: #F88379; margin-right: 20px; margin-bottom: 20px">
             <img class="card-img-top" src="/assets/images/person2.png" style="width: 209px; height: 188px; margin: auto" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title text-center">George Costanza</h5>
@@ -58,7 +64,7 @@
 
 
 
-          <div class="card my-card" style="width: 18rem; background-color: #F88379; margin-right: 20px">
+          <div class="card" style="width: 18rem; background-color: #F88379; margin-right: 20px; margin-bottom: 20px;">
             <img class="card-img-top" src="/assets/images/person3.png" style="width: 209px; height: 188px; margin: auto"alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title text-center">Ayesha Milah</h5>
@@ -71,7 +77,7 @@
 
 
 
-          <div class="card my-card" style="width: 18rem; background-color: #F88379;">
+          <div class="card" style="width: 18rem; background-color: #F88379; margin-right: 20px; margin-bottom: 20px;">
             <img class="card-img-top" src="/assets/images/person4.png" style="width: 209px; height: 188px; margin: auto" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title text-center">John Major</h5>
