--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -19,7 +19,7 @@
 	<!---Navbar--->
 	<nav class="navbar navbar-expand-lg  border-body" style="background-color: #9fc4cd;"data-bs-theme="dark">
 	  <div class="container-fluid">
-	    <a class="navbar-brand" href="#">Fort Smythe bed and breakfast</a>
+	    <a class="navbar-brand" href="/">Fort Smythe bed and breakfast</a>
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" 		aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
@@ -98,10 +98,10 @@
     </div>
 
     <div class="col">
-      <h5>Make a booking</h5>
+      <p>Cookiepolicy</p>
+      <p>User guidelines</p>
       <div class="row">
-      <a href="/generals-quarters" class="link">General's quarters</a>
-      <a href="/majors-suite" class="link">Major's suite</a>
+
     </div>
     </div>
 </div>
